--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -11,5 +11,8 @@
         border: red solid 1px;
         display: flex;
         justify-content: right;
+       .link{
+        text-decoration: none;
+        }
     }
 }
