--- a/src/Containers/HomePage/HomePage.scss
+++ b/src/Containers/HomePage/HomePage.scss
@@ -1,47 +1,50 @@
 .containerGeneral-Home {
-    border: 1px solid red;
     width: 100vmax;
-    height: 100vh;
     .containerCentral-Home {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 2fr;
+        border: 3px solid black;
         .title-Home {
-            border: 1px solid red;
-            // font-size: 0.2em;
+            height: 20em;
+            width: 40em;
             color: rgba(9, 107, 91, 0.822);
             font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
             background-color: azure;
             .text-Home {
                 text-align: justify;
+                margin-top: 10em;
                 margin: 0.4em;
                 color: rgba(13, 17, 16, 0.822);
             }
         }
         .img1 {
             height: 20em;
-            width: 50em;
+            width: 60em;
+            position: relative;
             background-repeat: no-repeat;
             background-image: url(https://veterinariasedavi.com/new/wp-content/uploads/2021/11/equipo-cvs-1-min-1024x683.jpg);
         }
     }
     .containerServices-Home {
-        border: 1px solid red;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows:1fr 1fr;
+        grid-template-rows: 1fr 1fr;
         justify-items: center;
         align-items: center;
     }
     .containerServices-Home-row {
+        display: grid;
+        gap: 10em;
         .cardServices-Home {
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: 10fr 0.5fr 0.5fr;
             justify-items: center;
             align-items: center;
-            width: 10em;
-            height: 20em;
-            margin: 5em;
+            width: 15em;
+            height: 15em;
+            margin: 3em;
+            text-align: center;
 
             img {
                 width: 5em;
