Método para eliminar mascotas por usuario funcionando

--- a/src/Components/CardAppoinments/CardAppoinments.scss
+++ b/src/Components/CardAppoinments/CardAppoinments.scss
@@ -1,5 +1,9 @@
-.Card {
-    border-top: 1px solid red;
-    display: flex;
-    justify-content: center;
-}
+// .contenedorCard-Appointments {
+//     display: flex;
+//     justify-content: space-around;
+//     .Card {
+//         border-top: 1px solid red;
+//         display: flex;
+//         justify-content: center;
+//     }
+// }
