--- a/src/Components/CardAppoinments/CardAppoinments.scss
+++ b/src/Components/CardAppoinments/CardAppoinments.scss
@@ -1,9 +1,28 @@
-// .contenedorCard-Appointments {
-//     display: flex;
-//     justify-content: space-around;
-//     .Card {
-//         border-top: 1px solid red;
-//         display: flex;
-//         justify-content: center;
-//     }
-// }
+.container-cardAppointments {
+    border: 1px solid rgb(65, 61, 61);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    .cardAppointments {
+        border: 1px solid rgb(65, 61, 61);
+        margin: 1em;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-direction: row;
+        width: 15em;
+        height: 20em;
+        form {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .botones-m {
+                margin-left: 20%;
+            }
+            .botones-d {
+                margin-left: 25%;
+            }
+        }
+    }
+}
