--- a/src/Containers/ProfileUser/ProfileUser.scss
+++ b/src/Containers/ProfileUser/ProfileUser.scss
@@ -1,9 +1,21 @@
-.ContainerPrincipal-Appointments {
-    display: flexbox;
-    border: 1px red solid;
-    justify-content: center;
-    gap: 5em;
-    .Container-Appointments {
-        border: 1px red;
+.principal-profileUser {
+    display: flex;
+    justify-content:start;
+    align-items: center;
+    flex-direction: column;
+    gap: 10em;
+    background-image: url(../../Containers/HomePage/image/curita.png);
+    background-size: 12em 12em;
+    height: 100vh;
+    .Titulo {
+        h1 {
+            color: rgb(12, 4, 43);
+            background-color: azure;
+        }
+    }
+    .listAnimales {
+        border: 1px red solid;
+        display: flex;
+        flex-direction: row;
     }
 }
