cambiando diseño del homePage, imagén de portada

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    background-color: azure;
+    background-image: linear-gradient(180deg, #abfaf2 0, #8feae6 25%, #6cd8d8 50%, #41c6cb 75%, #00b6c1 100%);
     height: 8em;
     .logo {
         margin-left: 0.9em;
