Creando componente de Error y Loading

--- a/src/Components/ListAppoinments/ListAppoinments.scss
+++ b/src/Components/ListAppoinments/ListAppoinments.scss
@@ -1,5 +1,7 @@
-.ContainerAppointments{
+
+.ContainerAppointments {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     margin: 1em;
+    background-color: rgb(255, 255, 255);
 }
