--- a/src/Containers/HomePage/HomePage.scss
+++ b/src/Containers/HomePage/HomePage.scss
@@ -1,37 +1,16 @@
 .containerGeneral-Home {
-    width: 99.2vw;
     .containerCentral-Home {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        justify-items: center;
-        border: 3px solid black;
         .title-Home {
+            border: solid black 0.2em;
             height: 20em;
-            margin-left: 1em;
-            color: rgba(9, 107, 91, 0.822);
-            font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-            background-color: azure;
-            .text-Home {
-                text-align: justify;
-                margin-top: 10em;
-                margin: 1em;
-                color: rgba(13, 17, 16, 0.822);
-            }
-        }
-        .img1 {
-           
-            margin-left: 15em;
-            width: 50vw;
-            position: relative;
-            background-repeat: no-repeat;
-            background-image: url(https://www.hogarmania.com/img/mascotas/mascotas-listados.jpg);
-            background-size:40em 19em;
+            color: rgba(15, 65, 55, 0.849);
+            background-color: rgb(60, 197, 197);
         }
     }
     .containerServices-Home {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr ;
+        grid-template-rows: 1fr;
         justify-items: center;
         align-items: center;
     }
