--- a/src/Components/ListAppoinments/ListAppoinments.scss
+++ b/src/Components/ListAppoinments/ListAppoinments.scss
@@ -1,7 +1,13 @@
 
+.Loading{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    align-content: center;
+}
+
 .ContainerAppointments {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 1em;
-    background-color: rgb(255, 255, 255);
 }
